--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
     
-    <!-- Icons (Load Library) -->
+    <!-- Icons -->
     <script src="https://unpkg.com/feather-icons"></script>
 
-    <!-- Link to your Custom CSS -->
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="bg-grid"></div>
+    <div class="glow-overlay"></div>
 
     <div class="container">
         <!-- Navigation -->
@@ -51,7 +52,6 @@
         <section id="experience" class="reveal">
             <div class="section-header">
                 <span class="section-title">01 / Research Experience</span>
-                <span class="date-span">2024 — Present</span>
             </div>
 
             <div class="exp-grid">
@@ -132,10 +132,10 @@
                     <div class="card reveal">
                         <div class="card-top">
                             <div>
-                                <div class="role-title">Project Lead</div>
+                                <div class="role-title">NLP Researcher</div>
                                 <div class="company">MBZUAI</div>
                             </div>
-                            <div class="date">Jun 2025 - Dec 2025</div>
+                            <div class="date">Jun 2025 - Present</div>
                         </div>
                         <div class="card-desc">
                             Leading LLM clinical reasoning project with Calicut Medical College. Working on Hindi-English finance NLP for TACL publication.
@@ -152,7 +152,7 @@
                             <div class="date">Mar 2025 - Oct 2025</div>
                         </div>
                         <div class="card-desc">
-                            Built automated pipeline using Mistral-7B-Instruct to fact-check news transcripts. Designed real-time dashboards for verification.
+                            Built automated pipeline using Mistral-7B-Instruct to fact-check news transcripts.
                         </div>
                     </div>
                 </div>
@@ -169,7 +169,7 @@
             <div class="card project-card reveal">
                 <div class="card-top">
                     <h3>Autonomous Software Engineering Agent</h3>
-                    <div class="date"><a href="#" class="view-code">View Code <i data-feather="arrow-up-right" style="width:14px;"></i></a></div>
+                    <div class="date"><a href="https://github.com/AjmalMIITM" target="_blank" class="view-code">View Code <i data-feather="arrow-up-right" style="width:14px;"></i></a></div>
                 </div>
                 <div class="card-desc">
                     <p>Architected a production-grade LLM agent handling end-to-end software delivery from natural language requirements to deployed applications. Achieved 95%+ success rate under real evaluation conditions.</p>
@@ -228,13 +228,6 @@
                             <div class="date">National Scholarship for Academic Excellence</div>
                         </div>
                     </div>
-                    <div class="achievement-item">
-                        <i data-feather="check-circle" class="trophy-icon"></i>
-                        <div>
-                            <div class="award-title">1st Rank</div>
-                            <div class="date">Masjid Public Exam (2k participants)</div>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
@@ -246,8 +239,8 @@
             
             <div class="contact-links">
                 <a href="mailto:24f2004489@ds.study.iitm.ac.in" class="email-link">Email</a>
-                <a href="#" class="social-link">LinkedIn</a>
-                <a href="#" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/ajmal-m-282670284/" target="_blank" class="social-link">LinkedIn</a>
+                <a href="https://github.com/AjmalMIITM" target="_blank" class="social-link">GitHub</a>
             </div>
         </section>
 
@@ -256,7 +249,7 @@
         </footer>
     </div>
 
-    <!-- Link to your Custom JS -->
+    <!-- JS -->
     <script src="script.js"></script>
 </body>
 </html>
