--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                     <div class="date"><a href="https://github.com/AjmalMIITM" target="_blank" class="view-code">View Code <i data-feather="arrow-up-right" style="width:14px;"></i></a></div>
                 </div>
                 <div class="card-desc">
-                    <p>Architected a production-grade LLM agent handling end-to-end software delivery from natural language requirements to deployed applications. Achieved 95%+ success rate under real evaluation conditions.</p>
+                    <p>Architected a LLM agent handling end-to-end software delivery from natural language requirements to deployed applications. Achieved 85%% success rate under real evaluation conditions.</p>
                     <ul style="margin-top:1rem;">
-                        <li>Innovated prompt engineering framework enabling GPT-4o Mini to generate multi-paradigm code (Python/Flask, Docker, YAML).</li>
+                        <li>Innovated prompt engineering framework enabling claude 3.5 sonnet to generate multi-paradigm code (Python/Flask, Docker, YAML).</li>
                         <li>Engineered robust infrastructure with < 2-minute deployment cycles validated by IIT Madras faculty.</li>
                     </ul>
                 </div>
@@ -239,8 +239,8 @@
             
             <div class="contact-links">
                 <a href="mailto:24f2004489@ds.study.iitm.ac.in" class="email-link">Email</a>
-                <a href="https://www.linkedin.com/in/ajmal-m-282670284/" target="_blank" class="social-link">LinkedIn</a>
-                <a href="https://github.com/AjmalMIITM" target="_blank" class="social-link">GitHub</a>
+                <a href="https://www.linkedin.com/in/ajmal-m-282670284/" class="social-link">LinkedIn</a>
+                <a href="https://github.com/AjmalMIITM" class="social-link">GitHub</a>
             </div>
         </section>
 
