--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="card reveal">
                     <div class="card-top">
                         <div>
-                            <div class="role-title">Project Lead</div>
+                            <div class="role-title">NLP Researcher</div>
                             <div class="company">MBZUAI</div>
                         </div>
                         <div class="date">Jun 2025 - Present</div>
